fix width of elements which caused in too wide site

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,5 @@
 .header {
     background-color: #075411;
-    width: 100vw;
     height: 100px;
     display: flex;
     justify-content: center;
